# confix

./: .gitignore  00branches.txt  AUTHORS  ChangeLog  ChangeLog.1.3  ChangeLog.1.4  ChangeLog.1.5  ChangeLog.RB-2.1  ChangeLog.bulk-install  FILE-HEADER  HACKING  INSTALL  MANIFEST.in  README  TODO.txt  jfasch-TODO.txt  setup.py
contrib/: .envMakeModule  makeModule.sh
doc/: 00branches-cvs.txt  00branches.txt  Makefile  NEWS-1.2.txt  RELEASE-1_0_0.txt  RELEASE-1_0_1.txt  RELEASE-1_1_0.txt  RELEASE-1_2_0.txt  RELEASE-CHECKLIST.txt  RELEASE-NOTES.txt  Sourceforge-Procedure.txt  confix.html  confix.ps  confix.texi  index.html  optmod.dot  prov-req.eps  prov-req.fig
doc/presentation/: Makefile  confix.mgp  default.mgp  presentation.txt
libconfix/: __init__.py
libconfix/core/: __init__.py  builder.py  buildinfo.py  dependencyset.py  edgefinder.py  entrybuilder.py  filebuilder.py  installed_node.py  installed_package.py  local_node.py  local_package.py  node.py  package.py  provide.py  provide_callable.py  provide_string.py  provide_symbol.py  readonly_prefixes.py  require_string.py  require_symbol.py  setup.py
libconfix/plugins/: __init__.py
libconfix/plugins/cmake/tests/handwritten-prototypes/boost/: CMakeLists.txt
libconfix/plugins/cmake/tests/handwritten-prototypes/sourcefile-used-by-two-executables/: CMakeLists.txt  main.c
libconfix/plugins/cmake/tests/handwritten-prototypes/xmi-simulation/shared/: CMakeLists.txt
libconfix/plugins/cmake/tests/handwritten-prototypes/xmi-simulation/term/: CMakeLists.txt
libconfix/save/: args.py  buildable.py  buildable_c.py  buildable_c_base.py  buildable_clusterer_c.py  buildable_composite.py  buildable_cxx.py  buildable_exe.py  buildable_gen_demo_cluster.py  buildable_gen_demo_single.py  buildable_h.py  buildable_iface.py  buildable_lex.py  buildable_library.py  buildable_linked.py  buildable_mgr.py  buildable_mgr_bases.py  buildable_script.py  buildable_single.py  buildable_yacc.py  configfile.py  configprofile.py  configure.py  fileprops.py  helper_configure_in.py  kde_hack.py  make.py  makefile_py.py  (+15 more)
relnotes/: REL-2.3.4.txt  REL-2.3.5.txt
samples/: doxy.conf
scripts/: bulk-install.py  confix-output.py  confix-package-properties.py  confix2.py  dependency-path.py  dops.py  dump-repofile.py  find-path.py  linkline.py  print_module.py  repo-headers.py  writedot.py
share/confix/autoconf-archive/: Makefile.am  Makefile.in  README  configure  configure.ac  maintainer.mk
share/confix/autoconf-archive/htmldoc/: _ac_c_ifdef.html  _ac_latex_test.html  _acltx_test.html  ac-archive.css  ac_arg_with_path_style.html  ac_as_dirname.html  ac_as_mkdir_p.html  ac_auto_include_headers.html  ac_c_bigendian_cross.html  ac_c_long_long.html  ac_c_long_long_.html  ac_c_printf_thsep.html  ac_c_var_func.html  ac_caolan_check_package.html  ac_caolan_func_which_gethostbyname_r.html  ac_caolan_search_package.html  ac_check_cc_opt.html  ac_check_class.html  ac_check_classpath.html  ac_check_curl.html  ac_check_func_in.html  ac_check_icu.html  ac_check_java_home.html  ac_check_junit.html  ac_check_mysql_db.html  ac_check_mysqlr.html  ac_check_rqrd_class.html  ac_check_struct_for.html  ac_check_symbol.html  ac_check_taglib.html  ac_check_typedef.html  ac_check_user.html  ac_compile_check_sizeof.html  ac_compile_warnings.html  ac_cond_with.html  ac_cond_with_level.html  ac_config_libconfig_in.html  ac_config_pkgconfig_in.html  ac_create_generic_config.html  ac_create_prefix_config_h.html  (+399 more)
share/confix/autoconf-archive/m4src/: ac_arg_with_path_style.m4  ac_as_dirname.m4  ac_as_mkdir_p.m4  ac_c_long_long.m4  ac_c_printf_thsep.m4  ac_c_var_func.m4  ac_caolan_check_package.m4  ac_caolan_search_package.m4  ac_check_cc_opt.m4  ac_check_func_in.m4  ac_check_mysql_db.m4  ac_check_mysqlr.m4  ac_check_struct_for.m4  ac_check_symbol.m4  ac_check_taglib.m4  ac_check_typedef.m4  ac_check_user.m4  ac_cond_with.m4  ac_cond_with_level.m4  ac_create_generic_config.m4  ac_create_prefix_config_h.m4  ac_create_stdint_h.m4  ac_create_target_h.m4  ac_cxx_complex_math_in_namespace_std.m4  ac_cxx_const_cast.m4  ac_cxx_cxxflags_std_lang.m4  ac_cxx_default_template_parameters.m4  ac_cxx_dtor_after_atexit.m4  ac_cxx_dynamic_cast.m4  ac_cxx_enum_computations.m4  ac_cxx_enum_computations_with_cast.m4  ac_cxx_explicit_instantiations.m4  ac_cxx_explicit_template_function_qualification.m4  ac_cxx_extern_template.m4  ac_cxx_full_specialization_syntax.m4  ac_cxx_function_nontype_parameters.m4  ac_cxx_gnucxx_hashmap.m4  ac_cxx_have_complex.m4  ac_cxx_have_complex_math1.m4  ac_cxx_have_complex_math2.m4  (+207 more)
tests/: 00build.py  00inmem.py
(+609 files in other folders)
