# Install the Autoconf Macro Archive
#
# Copyright (c) 2006 by Peter Simons <simons@cryp.to>
# Licensed under the terms of the GNU General Public License.

dist_pkgdata_DATA = AUTHORS COPYING README

aclocaldir	  = $(datadir)/aclocal
dist_aclocal_DATA = $(M4SOURCE)

htmldir		  = $(pkgdatadir)/html
dist_html_DATA	  = $(HTMLDOC)


if MAINTAINER
include maintainer.mk
endif
