PROJECT(test)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(Boost REQUIRED COMPONENTS date_time)
FIND_PACKAGE(Boost REQUIRED COMPONENTS system)

if (NOT Boost_FOUND)
    MESSAGE(FATAL_ERROR "BOOST: not found")
endif (NOT Boost_FOUND)

MESSAGE(STATUS ":${Boost_DATE_TIME_FOUND}:")

IF (NOT Boost_DATE_TIME_FOUND)
    MESSAGE(FATAL_ERROR "BOOST: date_time not found")
ENDIF (NOT Boost_DATE_TIME_FOUND)

MESSAGE(STATUS "Boost_INCLUDE_DIR ${Boost_INCLUDE_DIR}")
MESSAGE(STATUS "Boost_LIBRARIES: ${Boost_LIBRARIES}")
MESSAGE(STATUS "Boost_DATE_TIME_LIBRARY: ${Boost_DATE_TIME_LIBRARY}")
